# DiCE

./: .gitignore  CODEOWNERS  MANIFEST.in  README.md  README.rst  environment-deeplearning.yml  environment.yml  hello.txt  pyproject.toml  requirements-deeplearning.txt  requirements-linting.txt  requirements-test.txt  requirements.txt  setup.py
.github/workflows/: code-scan.yml  linkcheck.yml  notebook-linting.yml  notebook-tests.yml  python-linting.yml  python-package-conda.yml  python-package.yml  python-publish.yml  pythonpackage.yml
dice_ml/: __init__.py  constants.py  counterfactual_explanations.py  data.py  dice.py  diverse_counterfactuals.py  model.py
dice_ml/data_interfaces/: base_data_interface.py  private_data_interface.py  public_data_interface.py
dice_ml/dice_interfaces/: dice_base.py  dice_base_gencf.py  dice_basegencf.py  dice_model_approx_gencf.py  dice_oracle_gencf.py  dice_pytorch.py  dice_tensorflow.py  dice_tensorflow1.py  dice_tensorflow2.py
dice_ml/explainer_interfaces/: dice_Ball.py  dice_KD.py  dice_base_gencf.py  dice_genetic.py  dice_genetic_conformance.py  dice_model_approx_gencf.py  dice_multi_objective_genetic.py  dice_pytorch.py  dice_random.py  dice_tensorflow1.py  dice_tensorflow2.py  dice_tensorflow2_multi.py  dice_xgboost.py  explainer_base.py  feasible_base_vae.py  feasible_model_approx.py
dice_ml/model_interfaces/: base_model.py  keras_tensorflow_model.py  pytorch_model.py  xgboost_model.py
dice_ml/schema/: counterfactual_explanations_v1.0.json  counterfactual_explanations_v2.0.json
dice_ml/utils/: exception.py  helpers.py  (+2 more)
docs/: .buildinfo  .nojekyll  DiCE_getting_started.py  Makefile  dice_ml.data_interfaces.html  dice_ml.dice_interfaces.html  dice_ml.explainer_interfaces.html  dice_ml.html  dice_ml.model_interfaces.html  dice_ml.schema.html  dice_ml.utils.html  dice_ml.utils.sample_architecture.html  genindex.html  includeme.html  index.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  setup.html  update_docs.sh
notebooks/: DiCE_getting_started.ipynb  DiCE_getting_started_feasible.ipynb  DiCE_getting_started_feasible_exp.ipynb  DiCE_with_advanced_options.ipynb  DiCE_with_private_data.ipynb
tests/: conftest.py  test_counterfactual_explanations.py  test_data.py  test_dice.py  test_dice_e2e.py  test_helpers.py  test_model.py  test_notebooks.py
(+111 files in other folders)
